# EdgeCrafterFromScratch

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/hydra/: default.yaml
configs/path/: default.yaml
engine/: __init__.py
engine/core/: _config.py  meta.py  omega_config.py  workspace.py
engine/data/dataloaders/: dataloader.py
engine/data/datasets/: detection_dataset.py
engine/data/datasets/detection/: _dataset.py  _parser.py
engine/data/datasets/detection/parsers/: coco_parser.py  yolo_parser.py
engine/data/parsers/: coco_parser.py  yolo_parser.py
engine/data/transforms/: compose.py  convert.py  transforms.py
engine/utils/: log.py
