[project]
name = "edgecrafterfromscratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rootutils>=1.0.7",
    "loguru>=0.7.3",
    "rich>=15.0.0",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "numpy==2.0.1",
    "pycocotools>=2.0.11",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu118"}
]
torchvision = [
    {index = "pytorch-cu118"}
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
